# euler

./: .gitignore  .gitmodules  .hgignore  .travis.yml  002.cpp  028.hs  030.hs  Analysis.xlsx  CMakeLists.txt  EulerValues.py  LICENSE  Makefile  README.md  bootstrap.sh  build.py  conanfile.txt  euler.cabal  make.progs  make.tmpl  package.yaml
Background/: js.py
analysis/: Analysis.xlsx  cabal.progs
bench/: prime.hs
doc/Background/: fizzbuzz.hs
doc/haskell-primes/: BayerPrimesLimitTest.hs  BayerPrimesTest.hs  GalePrimes2Test.hs  GalePrimesTest.hs  NEWS  NaiveSieveLimitTest.hs  NaiveSieveTest.hs  NaiveSieveWheelTest.hs  NaurPrimes.hs  ONeillPrimesTest.hs  OlegPrimesTest.hs  ReinkePrimesTest.hs  SimplePrimesLimitTest.hs  SimplePrimesTest.hs  ZilibowitzPrimesTest.hs  time.sh
driver/: p003.hs  p004.hs  p005.hs  p008.hs  p010.hs  p014.hs  p016.hs  p018.hs  p026.hs  p042.hs  p046.hs
f#/: .gitignore  ProjectEuler.sln  README.md
f#/Data/: AssemblyInfo.fs  Char.fs  Data.fsproj  Script.fsx  packages.config
f#/Euler/: AssemblyInfo.fs  Euler.fsproj  Euler.sln
f#/NumberTheory/: AssemblyInfo.fs  Library1.fs  NumberTheory.fsproj  Script.fsx
f#/Problems/: AssemblyInfo.fs  P001.fs  P002.fs  P003.fs  P004.fs  P005.fs  P006.fs  P007.fs  P009.fs  P010.fs  P013.fs  P014.fs  P015.fs  P016.fs  P017.fs  P019.fs  P020.fs  P021.fs  P023.fs  Problems.fsproj  packages.config
f#/ProjectEuler/: AssemblyInfo.fs  Euclid.fs  P001.fs  P002.fs  P003.fs  P004.fs  Prime.fs  ProjectEuler.fsproj  packages.config
f#/SimplePrimeWrapper/: Program.cs  SimplePrimeWrapper.csproj
f#/SimplePrimeWrapper/Properties/: AssemblyInfo.cs
f#/primeSieve/: .gitignore  Makefile.msvc  primeSieve.vcxproj  primeSieve.vcxproj.filters  primesieveExport.h  readme.txt  stdafx.cpp
f#/primeSieve/include/: primesieve.h  primesieve.hpp
f#/primeSieve/include/primesieve/: Callback.hpp  ParallelPrimeSieve.hpp  PrimeSieve.hpp  iterator.hpp
f#/primeSieveWrapper/: ReadMe.txt  primeSieveWrapper.cpp  primeSieveWrapper.h  primeSieveWrapper.vcxproj  primeSieveWrapper.vcxproj.filters  stdafx.cpp
f#/primesieve.Test/: primesieve.Test.vcxproj  primesieve.Test.vcxproj.filters  stdafx.cpp
f#/src/: p001.fsx
haskell/: .hgignore  .travis.yml  Makefile  euler.cabal
haskell/doc/Background/: TestDivisors.hs
haskell/doc/haskell-primes/: AtkinSieveTest.hs  Makefile  NaurPrimesTest.hs  ONeillPrimesLimitTest.hs  PriorityQ.hs  RuncimanPrimesTest.hs
haskell/src/: p011.hs  p012.hs  p015.hs  p020.hs  p021.hs  p022.hs  p024.hs  p025.hs  p035.hs  p037.hs  p038.hs
haskell/src/Euler/: NumberProperties.hs  ONeillPrimes.hs  Sequences.hs
haskell/src/Euler/Problems/: P001.hs  P002.hs  P005.hs  P007.hs  P011.hs  P013.hs  P014.hs  P016.hs  P018.hs  P022.hs  P023.hs  P026.hs  P029.hs  P033.hs  P037.hs  P040.hs  P056.hs  collatz.fsx
haskell/testsuite/benchmarks/: problems.hs
haskell/util/: build.py
kotlin/: .gitignore  benchmark.sh  pom.xml
kotlin/benchmark/: pom.xml
kotlin/benchmark/src/main/java/com/codestrokes/: EulerBenchmark.java
kotlin/euler/src/main/kotlin/: Hello.kt
kotlin/euler/src/main/kotlin/com/codestrokes/: Problem001.kt
kotlin/euler/src/test/kotlin/: HelloTest.kt  Steps.kt
kotlin/euler/src/test/resources/features/: Problem-001.feature  Problem-002.feature
kotlin/problems/: pom.xml
kotlin/problems/src/main/kotlin/com/codestrokes/: Problem003.kt
kotlin/problems/src/test/java/: PrimeSteps.java
kotlin/problems/src/test/kotlin/: CucumberTest.kt  Steps.kt
kotlin/problems/src/test/resources/features/: Primes.feature  Problem-001.feature  Problem-003.feature
kotlin/src/test/kotlin/: CucumberTest.kt  Steps.kt
src/: 001.cpp  001.hs  002.cpp  003.cpp  003.hs  004.cpp  004.hs  005.cpp  005.hs  006.cpp  007.cpp  007.hs  008.hs  009.hs  010.hs  011.hs  012.hs  013.hs  014.hs  015.hs  017.hs  018.hs  019.hs  020.hs  021.hs  022.hs  023.hs  025.hs  026.hs  027.hs  028.hs  029.hs  030.hs  031.hs  032.hs  033.hs  034.hs  035.hs  036.hs  037.hs  (+41 more)
src/Euler/: Combinatorics.hs  NumberProperties.hs  NumberTheory.hs  ONeillPrimes.hs  Problems.hs
src/Euler/Problems/: P003.hs  P004.hs  P005.hs  P006.hs  P007.hs  P008.hs  P009.hs  P010.hs  P011.hs  P012.hs  P013.hs  P014.hs  P015.hs  P016.hs  P017.hs  P018.hs  P019.hs  P020.hs  P021.hs  P024.hs  P025.hs  P026.hs  P027.hs  P028.hs  P029.hs  P030.hs  P031.hs  P032.hs  P034.hs  P035.hs  P036.hs  P038.hs  P039.hs  P041.hs  P043.hs  P045.hs  P046.hs  P048.hs  P096.hs
testsuite/: TestRunner.hs  test-euler.hs
testsuite/adhoc/: test-euler.hs  test-problems.hs
testsuite/benchmarks/: prime.hs  problems.hs
testsuite/quick/: primes.hs
testsuite/tests/Euler/: primes.hs  problems.hs
util/: EulerValues.py  answers.js  answers.txt  cabal.progs  cabal.tmpl  g.sh  make.tmpl  process.m
