cmake_minimum_required(VERSION 3.10.2)
project (euler++)

set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
set(RANGES_CXX_STD 1z)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS -std=c++1z)

include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup()

include_directories(vendor/primesieve-7.2/include)
add_subdirectory(vendor/primesieve-7.2)


file(GLOB APP_SOURCES src/*.cpp)

enable_testing()
foreach(testsourcefile ${APP_SOURCES})
	get_filename_component(appname ${testsourcefile} NAME_WE)
	set(testname "Problem-${appname}")
	message("App Name: ${appname}")
	message("Test Name: ${testname}")
	add_executable(${appname} ${testsourcefile})
	target_link_libraries(${appname} libprimesieve ${CONAN_LIBS})
	add_test(${testname} bin/${appname})
	list(APPEND testprogs ${appname})
endforeach(testsourcefile ${APP_SOURCES})

add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND}
                  DEPENDS ${testprogs})

set_tests_properties(Problem-001 PROPERTIES PASS_REGULAR_EXPRESSION "233168")
set_tests_properties(Problem-002 PROPERTIES PASS_REGULAR_EXPRESSION "4613732")
set_tests_properties(Problem-003 PROPERTIES PASS_REGULAR_EXPRESSION "6857")
set_tests_properties(Problem-004 PROPERTIES PASS_REGULAR_EXPRESSION "906609")
set_tests_properties(Problem-005 PROPERTIES PASS_REGULAR_EXPRESSION "232792560")
set_tests_properties(Problem-006 PROPERTIES PASS_REGULAR_EXPRESSION "25164150")
set_tests_properties(Problem-007 PROPERTIES PASS_REGULAR_EXPRESSION "104743")
#set_tests_properties(Problem-008 PROPERTIES PASS_REGULAR_EXPRESSION "40824")
#set_tests_properties(Problem-009 PROPERTIES PASS_REGULAR_EXPRESSION "31875000")
#set_tests_properties(Problem-010 PROPERTIES PASS_REGULAR_EXPRESSION "142913828922")
#set_tests_properties(Problem-011 PROPERTIES PASS_REGULAR_EXPRESSION "70600674")
#set_tests_properties(Problem-012 PROPERTIES PASS_REGULAR_EXPRESSION "76576500")
#set_tests_properties(Problem-013 PROPERTIES PASS_REGULAR_EXPRESSION "5537376230")
#set_tests_properties(Problem-014 PROPERTIES PASS_REGULAR_EXPRESSION "525,837799")
#set_tests_properties(Problem-015 PROPERTIES PASS_REGULAR_EXPRESSION "137846528820")
#set_tests_properties(Problem-016 PROPERTIES PASS_REGULAR_EXPRESSION "1366")
#set_tests_properties(Problem-017 PROPERTIES PASS_REGULAR_EXPRESSION "21124")
#set_tests_properties(Problem-018 PROPERTIES PASS_REGULAR_EXPRESSION "1074")
#set_tests_properties(Problem-019 PROPERTIES PASS_REGULAR_EXPRESSION "171")
#set_tests_properties(Problem-020 PROPERTIES PASS_REGULAR_EXPRESSION "648")
#set_tests_properties(Problem-021 PROPERTIES PASS_REGULAR_EXPRESSION "31626")
#set_tests_properties(Problem-022 PROPERTIES PASS_REGULAR_EXPRESSION "871198282")
#set_tests_properties(Problem-023 PROPERTIES PASS_REGULAR_EXPRESSION "4179871")
#set_tests_properties(Problem-024 PROPERTIES PASS_REGULAR_EXPRESSION "2783915460")
#set_tests_properties(Problem-025 PROPERTIES PASS_REGULAR_EXPRESSION "4782")
#set_tests_properties(Problem-026 PROPERTIES PASS_REGULAR_EXPRESSION "983")
#set_tests_properties(Problem-027 PROPERTIES PASS_REGULAR_EXPRESSION "-59231")
#set_tests_properties(Problem-028 PROPERTIES PASS_REGULAR_EXPRESSION "669171001")
#set_tests_properties(Problem-029 PROPERTIES PASS_REGULAR_EXPRESSION "9183")
#set_tests_properties(Problem-030 PROPERTIES PASS_REGULAR_EXPRESSION "443839")
#set_tests_properties(Problem-031 PROPERTIES PASS_REGULAR_EXPRESSION "73682")
#set_tests_properties(Problem-032 PROPERTIES PASS_REGULAR_EXPRESSION "45228")
#set_tests_properties(Problem-033 PROPERTIES PASS_REGULAR_EXPRESSION "100")
#set_tests_properties(Problem-034 PROPERTIES PASS_REGULAR_EXPRESSION "40730")
#set_tests_properties(Problem-035 PROPERTIES PASS_REGULAR_EXPRESSION "55")
#set_tests_properties(Problem-036 PROPERTIES PASS_REGULAR_EXPRESSION "872187")
#set_tests_properties(Problem-037 PROPERTIES PASS_REGULAR_EXPRESSION "748317")
#set_tests_properties(Problem-038 PROPERTIES PASS_REGULAR_EXPRESSION "932718654")
#set_tests_properties(Problem-039 PROPERTIES PASS_REGULAR_EXPRESSION "840")
#set_tests_properties(Problem-040 PROPERTIES PASS_REGULAR_EXPRESSION "210")
#set_tests_properties(Problem-041 PROPERTIES PASS_REGULAR_EXPRESSION "7652413")
#set_tests_properties(Problem-043 PROPERTIES PASS_REGULAR_EXPRESSION "16695334890")
#set_tests_properties(Problem-044 PROPERTIES PASS_REGULAR_EXPRESSION "")
#set_tests_properties(Problem-045 PROPERTIES PASS_REGULAR_EXPRESSION "1533776805")
#set_tests_properties(Problem-046 PROPERTIES PASS_REGULAR_EXPRESSION "")
#set_tests_properties(Problem-047 PROPERTIES PASS_REGULAR_EXPRESSION "")
#set_tests_properties(Problem-048 PROPERTIES PASS_REGULAR_EXPRESSION "9110846700")
#set_tests_properties(Problem-056 PROPERTIES PASS_REGULAR_EXPRESSION "972")
