name:                euler
version:             0.1.0.0
synopsis:            Project Euler Problems in Haskell
homepage:            bitbucket.org/jwright/euler
license:             BSD3
license-file:        LICENSE
author:              Jeremy Wright
maintainer:          jeremy@codestrokes.com
build-type:          Simple
cabal-version:       >=1.10

library
    build-depends:  base >=4.6 && <4.7, containers >=0.5 && <0.6, array >=0.4 && <0.5, time >=1.4 && <1.5, parallel >=3.2 && <3.3, array, QuickCheck, HUnit, primes, digits, split
    Exposed-Modules: Euler.Problems, Euler.Combinatorics, Euler.NumberTheory, Euler.ONeillPrimes, Euler.NumberProperties
    hs-source-dirs:  src
    default-language: Haskell2010

executable euler-001
  main-is:  001.hs
  build-depends:       base, euler, primes, digits, containers, split, array
  hs-source-dirs:      src
  default-language:    Haskell2010
  

executable euler-039
  main-is:  039.hs
  build-depends:       base, euler, primes, digits, containers, split, array
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite test-problems
    type:           exitcode-stdio-1.0
    hs-source-dirs: testsuite, src
    main-is:        TestRunner.hs
    build-depends:  base,
                    array,
                    HUnit,
                    QuickCheck,
                    test-framework,
                    test-framework-hunit,
                    test-framework-quickcheck2,
                   euler, primes, digits, containers, split, array
    default-language: Haskell2010

benchmark bench-builder-all
    type:       exitcode-stdio-1.0
    hs-source-dirs: testsuite/benchmarks, src
    main-is:        problems.hs
    build-depends:  base, criterion, euler, primes, digits, containers, split, array

