name:                euler
version:             0.1.0.0
synopsis:            Project Euler Problems in Haskell
homepage:            bitbucket.org/jwright/euler
license:             BSD3
license-file:        LICENSE
author:              Jeremy Wright
maintainer:          jeremy@codestrokes.com
build-type:          Simple
cabal-version:       >=1.10

library
    build-depends:      base ==4.6.*,
                        containers ==0.5.*,
                        array ==0.4.*,
                        time ==1.4.*,
                        parallel ==3.2.*,
                        array,
                        primes, 
                        digits, 
                        split
    Exposed-Modules:    Euler.Problems, 
                        Euler.Combinatorics, 
                        Euler.NumberTheory, 
                        Euler.ONeillPrimes, 
                        Euler.NumberProperties
    hs-source-dirs:     src
    default-language:   Haskell2010

Test-Suite test-problems
    type:           exitcode-stdio-1.0
    hs-source-dirs: testsuite/adhoc, src
    main-is:        test-problems.hs
    build-depends:  base,
                    euler, 
                    HUnit,
                    QuickCheck,
                    array,
                    containers, 
                    digits, 
                    primes, 
                    split, 
                    test-framework,
                    test-framework-hunit,
                    test-framework-quickcheck2
    default-language: Haskell2010

Test-Suite test-euler
    type:           exitcode-stdio-1.0
    hs-source-dirs: testsuite/adhoc, src
    main-is:        test-euler.hs
    build-depends:  base,
                    euler, 
                    HUnit,
                    QuickCheck,
                    array,
                    containers, 
                    digits, 
                    primes, 
                    split, 
                    test-framework,
                    test-framework-hunit,
                    test-framework-quickcheck2
    default-language: Haskell2010

Test-Suite test-quick
    type:           exitcode-stdio-1.0
    hs-source-dirs: testsuite/quick, src
    main-is:        primes.hs
    build-depends:  base,
                    euler, 
                    HUnit,
                    QuickCheck,
                    array,
                    containers, 
                    digits, 
                    primes, 
                    split, 
                    test-framework,
                    test-framework-hunit,
                    test-framework-quickcheck2
    default-language: Haskell2010

benchmark bench-problems
    type:       exitcode-stdio-1.0
    hs-source-dirs: testsuite/benchmarks, src
    main-is:        problems.hs
    build-depends:  base, 
                    euler, 
                    array,
                    containers, 
                    criterion, 
                    digits, 
                    primes, 
                    split 
    default-language: Haskell2010

benchmark bench-euler
    type:       exitcode-stdio-1.0
    hs-source-dirs: testsuite/benchmarks, src
    main-is:        prime.hs
    build-depends:  base, 
                    euler, 
                    array,
                    containers, 
                    criterion, 
                    digits, 
                    primes, 
                    split 
    default-language: Haskell2010

